--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,6 +3,44 @@
     font-size: 45px;
     line-height: 49px;
   }
+  .our-experts .ani-container{
+    height: 650px;
+  }
+  .our-experts .exp-one {
+    width: 131px;
+    height: 133px;
+  }
+  .our-experts .exp-two {
+    width: 144px;
+    height: 146px;
+  }
+  .our-experts .exp-three {
+    width: 127px;
+    height: 128px;
+  }
+  .our-experts .exp-four {
+    width: 153px;
+    height: 177px;
+  }
+  .our-experts .exp-five {
+    width: 138px;
+    height: 173px;
+  }
+  .our-experts .exp-six {
+    width: 96px;
+    height: 118px;}
+    .our-experts .exp-seven {
+      width: 128px;
+      height: 152px;
+    }  
+    .our-experts .exp-eight {
+      width: 143px;
+      height: 168px;
+    }
+    .our-experts .exp-nine {
+      width: 85px;
+      height: 103px;
+    }
 }
 
 @media only screen and (max-width: 1200px) {
@@ -43,6 +81,48 @@
   .contact-us h2 {
     font-size: 100px;
   }
+  .our-experts .ani-container {
+    height: 600px;
+}
+.our-experts .exp-one {
+  width: 111px;
+  height: 113px;
+}
+.our-experts .exp-two {
+  width: 124px;
+  height: 126px;
+}
+.our-experts .exp-three {
+  width: 107px;
+  height: 108px;
+}
+.our-experts .exp-four {
+  width: 133px;
+  height: 157px;
+}
+.our-experts .exp-five {
+  width: 118px;
+  height: 153px;
+}
+.our-experts .exp-seven {
+  width: 108px;
+  height: 122px;
+}
+.our-experts .exp-eight {
+  width: 123px;
+  height: 138px;
+}
+@keyframes expSeven {
+  0% {
+    bottom: 50%;
+    right: 50%;
+  }
+  100% {
+    bottom: 10%;
+    right: 62%;
+    transform: none;
+  }
+}
 }
 
 @media only screen and (max-width: 992px) {
