--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1304,93 +1304,240 @@ footer .ftr-bnr img {
   margin-bottom: 30px;
 }
 .our-experts .ani-container {
-  border: 1px solid red;
+  height: 800px;
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 600px;
-  position: relative;
 }
 
 .our-experts .round-container {
   position: absolute;
-  width: 600px;
-  height: 600px;
-  border-radius: 100%;
-  border: 1px solid green;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+/* @keyframes roundcontainerRotate {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+    width: 600px;
+    height: 600px;
+    border-radius: 100%;
+  }
+  25% {
+    transform: translate(-50%, -50%) rotate(90deg);
+
+  }
+  50% {
+    transform: translate(-50%, -50%) rotate(180deg);
+
+  }
+  75% {
+    transform: translate(-50%, -50%) rotate(270deg);
+    width: 600px;
+    height: 600px;
+    border-radius: 100%;
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
+} */
 
 .our-experts .exp-one {
   width: 171px;
   height: 173px;
-  top: -10%;
-  left: 31%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: expOne 2s linear 1s forwards;
+}
+
+@keyframes expOne {
+  0% {
+    top: 50%;
+    left: 50%;
+  }
+  100% {
+    top: 0%;
+    left: 20%;
+    transform: none;
+  }
 }
 
 .our-experts .exp-two {
   width: 184px;
   height: 186px;
-  top: 0%;
-  right: 0%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: expTwo 2s linear 1s forwards;
+}
+@keyframes expTwo {
+  0% {
+    top: 50%;
+    left: 50%;
+  }
+  100% {
+    top: 10%;
+    left: 52%;
+    transform: none;
+  }
 }
 
 .our-experts .exp-three {
   width: 167px;
   height: 168px;
-  top: 40%;
-  right: -20%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: expThree 2s linear 1s forwards;
+}
+@keyframes expThree {
+  0% {
+    top: 50%;
+    left: 50%;
+  }
+  100% {
+    top: 0%;
+    left: 72%;
+    transform: none;
+  }
 }
 
 .our-experts .exp-four {
   width: 193px;
   height: 217px;
-  bottom: -9%;
-  right: 14%;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
+  animation: expFour 2s linear 1s forwards;
+}
+
+@keyframes expFour {
+  0% {
+    top: 50%;
+    right: 50%;
+  }
+  100% {
+    top: 32%;
+    right: 0%;
+    transform: none;
+  }
 }
 
 .our-experts .exp-five {
   width: 178px;
   height: 213px;
-  bottom: -9%;
-  left: 10%;
+  bottom: 50%;
+  right: 50%;
+  transform: translate(50%, 50%);
+  animation: expFive 2s linear 1s forwards;
+}
+
+@keyframes expFive {
+  0% {
+    bottom: 50%;
+    right: 50%;
+  }
+  100% {
+    bottom: 0%;
+    right: 0%;
+
+    transform: none;
+  }
 }
 
 .our-experts .exp-six {
   width: 136px;
   height: 158px;
-  top: 40%;
-  left: -10%;
+  bottom: 50%;
+  right: 50%;
+  transform: translate(50%, 50%);
+  animation: expSix 2s linear 1s forwards;
+}
+
+@keyframes expSix {
+  0% {
+    bottom: 50%;
+    right: 50%;
+  }
+  100% {
+    bottom: 12%;
+    right: 30%;
+
+    transform: none;
+  }
 }
 
 .our-experts .exp-seven {
   width: 168px;
   height: 192px;
-  top: 30%;
-  left: 22%;
+  bottom: 50%;
+  right: 50%;
+  transform: translate(50%, 50%);
+  animation: expSeven 2s linear 1s forwards;
+}
+
+@keyframes expSeven {
+  0% {
+    bottom: 50%;
+    right: 50%;
+  }
+  100% {
+    bottom: 10%;
+    right: 71%;
+    transform: none;
+  }
 }
 
 .our-experts .exp-eight {
   width: 183px;
   height: 208px;
-  top: 0%;
-  left: 0%;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  animation: expEight 2s linear 1s forwards;
 }
 
-.our-experts .exp-eight {
-  width: 125px;
-  height: 143px;
-  top: 34%;
-  left: 51%;
+@keyframes expEight {
+  0% {
+    bottom: 50%;
+    left: 50%;
+  }
+  100% {
+    bottom: 5%;
+    left: 0%;
+    transform: none;
+  }
 }
 
 .our-experts .exp-nine {
   width: 125px;
   height: 143px;
-  top: 9%;
-  left: 0%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: expNine 2s linear 1s forwards;
+}
+
+@keyframes expNine {
+  0% {
+    top: 50%;
+    left: 50%;
+  }
+  100% {
+    top: 27%;
+    left: 6%;
+
+    transform: none;
+  }
 }
 
 .our-experts .brdr {
