--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,7 @@
 @media only screen and (max-width: 1400px) {
+  .our-experts .brdr {
+    border-radius: 15px;
+  }
   .we-serve .s-box strong {
     font-size: 45px;
     line-height: 49px;
@@ -361,6 +364,14 @@
     right: 8%;
     transform: none;
   }
+  
+}
+
+.our-experts .exp-one span {
+  right: inherit;
+  left: 100%;
+  margin-right: 0;
+  margin-left: 10px;
 }
 }
 
@@ -693,6 +704,53 @@
 }
 .our-experts .ani-container {
   height: 470px;
+}
+.our-experts span{
+  padding: 5px 6px;
+  font-size: 8px;
+  line-height: 9px;
+}
+.our-experts .exp-eight span {
+  right: -71%;
+  margin: 0;
+  bottom: 10%;
+}
+.our-experts .exp-three span {
+  right: 68%;
+  margin: 0;
+}
+.our-experts .exp-one span {
+  left: 60%;
+  margin-left: 0;
+}
+.our-experts .exp-two span {
+  right: 70%;
+  margin-right: 0px;
+}
+.our-experts .exp-four span {
+  right: 70%;
+  top: 40%;}
+
+  .our-experts .exp-nine span {
+    top: 90%;
+    margin-top: 0;
+}
+.our-experts .exp-seven span {
+  left: inherit;
+  bottom: 80%;
+  margin-left: 0;
+  right: 80%;
+}
+.our-experts .exp-six span {
+  top: 40%;
+  right: auto;
+  margin-top: 0;
+  left: 70%;
+}
+.our-experts .exp-five span {
+  bottom: 70%;
+  right: 70%;
+  margin-bottom: 0;
 }
 
 }
